--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "main": "dist/ByteBufferAB.js",
     "keywords": ["net", "array", "buffer", "arraybuffer", "typed array", "bytebuffer", "json", "websocket", "webrtc"],
     "dependencies": {
-        "long": "latest"
+        "long": "https://github.com/SobolevLexa/Long.js.git#master"
     },
     "license": "Apache-2.0"
 }
